src/test/deca/syntax/invalid/renduInter01/08EXCLAM_binary.deca
// Description:
//      Programme lexicalement incorrect
//      => l'opérateur NOT (symbole "!") est un opérateur unaire
//
// Resultats:
//      Erreur syntaxique
//      Ligne 12 : token '!' inattendu

{
    int x = 1;
    int y = 2;
    if ( y !x) {
        println("ok");
    } else {
        print("erreur");
    }
}
